# deepin-calculator

./: CMakeLists.txt  deepin-calculator.desktop  linglong.yaml
debian/: changelog
src/views/: simplelistdelegate.cpp  simplelistmodel.cpp
src/widgets/: expressionbar.cpp  inputedit.cpp  proexpressionbar.cpp  sciexpressionbar.cpp
tests/: CMakeLists.txt  cmake-lcov-test.sh  test-prj-running.sh
tests/src/: qt6_compat.h  ut_mainwindow.cpp  ut_memorypublic.cpp
tests/src/control/: ut_bitbutton.cpp  ut_equalbutton.cpp  ut_iconbutton.cpp  ut_memorybutton.cpp  ut_textbutton.cpp
tests/src/views/: ut_memoryitemdelegate.cpp  ut_memoryitemdelegate.h  ut_memoryitemwidget.cpp  ut_programmerarrowdelegate.cpp  ut_programmerarrowdelegate.h  ut_programmeritemwidget.cpp  ut_prolistdelegate.cpp  ut_simplelistdelegate.cpp  ut_simplelistmodel.cpp
tests/src/widgets/: ut_expressionbar.cpp  ut_proexpressionbar.cpp
translations/: deepin-calculator_it.ts
